--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
   },
   "require": {
     "php": "~7.1"
+  },
+  "require-dev": {
+    "codeception/codeception": "^4.1",
+    "codeception/module-asserts": "^1.0.0"
   }
 }
